# langturbo

./: Operations.md  README.md  compose.yaml  meilisearch-release.yaml  meilisearch-repo.yaml  meilisearch.yaml
agent/: pyproject.toml
agent/.kamal/: secrets
agent/config/: deploy.yml
agent/src/: agent.py
app/: .firebaserc  app.json  eas.json  metro.config.js  package-lock.json  package.json  types.d.ts
app/.firebase/: hosting.ZGlzdA.cache
app/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx  player.tsx
app/components/: AudioPlayer.tsx  AuthModal.tsx  Caption.tsx  Charts.tsx  Charts.web.tsx  EpisodeItem.tsx  EpisodeItemProgress.tsx  Loading.tsx  PipecatInit.tsx  PipecatInit.web.tsx  PodcastItem.tsx  PressInstructions.tsx  Progress.tsx  Room.tsx  (+11 more)
bot/: .env.example  README.md  bot.py  pyproject.toml
cron/: .dockerignore  Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
infrastructure/: .terraform.lock.hcl
k8s/: .sops.yaml  Readme.md  cert-manager-issuer.yaml  deployment.yaml  nextjs.yaml  postgres-cluster.yaml  postgres.yaml  sops.yaml
nextjs/: .gitignore  Dockerfile  drizzle.config.ts  instrumentation-client.ts  instrumentation.node.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  types.d.ts
terraform/: .gitignore  .terraform.lock.hcl  Readme.md  instances.tf  locals.tf  main.tf  network.tf  outputs.tf  variables.tf
test/: README.md
test/server/: .env.example  bot.py  pyproject.toml
whisper/: Dockerfile
(+219 files in other folders)
